--- a/server/package.json
+++ b/server/package.json
@@ -5,20 +5,21 @@
   "module": "",
   "main": "index.js",
   "scripts": {
-    "prestart": "rimraf dist && tsc",
+    "prestart": "npm run build",
     "start": "node ./dist",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build": "rimraf dist && tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "rimraf": "^5.0.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "rimraf": "^5.0.0"
   }
 }
