feat: toasts moved to context

--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "daisyui": "^2.51.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.192",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
