--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@types/lodash": "^4.14.192",
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
